# eagle_track

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugins.xml
config/: TrackParams.cfg  tf_connector.yaml  track_params.yaml
include/: detect_selector.h  temp.h  track.h  tracker.h
launch/: track.launch  tracking_example.launch
rviz/: eagle.rviz  interceptor.rviz
scripts/: build_opencv.sh  configure.sh
src/: Tracking.cpp  temp.cpp  track.cpp  tracker.cpp
tmux/interceptor_rosbag/: session.yml
tmux/simulation/: session.yml  uav_spawn_positions.csv
tmux/simulation/config/: circle_medium.txt  circle_small.txt  custom_config.yaml  spawner.yaml  trajectories.yaml  world_config.yaml
