<?xml version="1.0"?>
<package format="2">

  <name>eagle_track</name>
  <version>1.0.0</version>

  <description>Tracking other UAVs with two cameras on board</description>
  <maintainer email="mychkvad@fel.cvut.cz">Vadim Mychko</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>mrs_lib</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>uav_detect</depend>
  <depend>lidar_tracker</depend>

  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
